--- a/Suaah/Areas/Customer/Views/HotelBookings/PendingReservation.cshtml
+++ b/Suaah/Areas/Customer/Views/HotelBookings/PendingReservation.cshtml
@@ -25,8 +25,8 @@
                     <div class="row">
                         <div class="col-12 col-lg-6 pt-md-3">
                             <h5 class="d-inline">Hotel Name:</h5><strong class="mx-5">@item.HoteRoom.Hotel.Name</strong> <br>
-                            <h5 class="d-inline"> Room Type: </h5> <strong class="mx-5"> @item.HoteRoom.Description
-                                @*@item.HoteRoom.Type*@</strong> <br>
+                            <h5 class="d-inline"> Room Description: </h5> <strong class="mx-5"> @item.HoteRoom.Description
+                                </strong> <br>
                             <h5 class="d-inline" title="You Can Cancel Booking Before ... Hours"> Cancel Before: </h5> <strong class="mx-4"> @item.HoteRoom.CancelBeforeHours h</strong> <br>
                             <h5 class="d-inline"> Description: </h5>
                             <div class="col-9">
