--- a/Suaah/Areas/Admin/Views/AllHotelBookingHeaders/Index.cshtml
+++ b/Suaah/Areas/Admin/Views/AllHotelBookingHeaders/Index.cshtml
@@ -28,9 +28,11 @@
     }
 }
 
-<h1 class="mb-4">All Customers Hotel Bookings </h1>
-
-<div>
+<div class="text-center  m-2 mt-5 p-5 h">
+    <h1 class="mb-4">All Customers Hotel Bookings </h1>
+</div>
+<br />
+<div class="m-2">
     <div class="d-flex justify-content-between pt-4">
         <div class="p-2">
             <h2>Status</h2>
@@ -56,6 +58,7 @@
         </div>
     </div>
 </div>
+<br />
 
 <table class="table table-bordered table-striped" id="myTable" style="width:100%;">
     <thead>
@@ -75,7 +78,7 @@
 
 
 @section Scripts{
-<script src="~/js/AllHotelBookings.js"></script>
+    <script src="~/js/AllHotelBookings.js"></script>
 }
 
 
