--- a/Suaah/Areas/Admin/Views/HotelRooms/Delete.cshtml
+++ b/Suaah/Areas/Admin/Views/HotelRooms/Delete.cshtml
@@ -4,42 +4,25 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>HotelRoom</h4>
-    <hr />
-    <dl class="row">
-       @* <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Type)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Type)
-        </dd>*@
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Price)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Hotel)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Hotel.Name)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+<br />
+<br />
+<br />
+<br />
+<div class="text-center  m-2 mt-5 p-5 hd">
+    <h1>Are you sure you want to delete {@Html.DisplayFor(model => model.Description)} Room? </h1>
+</div>
+
+
+
+<form asp-action="Delete">
+    <input type="hidden" asp-for="Id" />
+    <div class="form-group m-3 p-3">
+        @if (User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Manager))
+        {
+            <input type="submit" value="Delete" class="btn btn-danger" /> <span>|</span>
+        }
+        <a asp-action="Index" class="btn btn-outline-primary">Back to List</a>
+    </div>
+</form>
 </div>
