--- a/Suaah/Areas/Admin/Views/HotelRooms/Edit.cshtml
+++ b/Suaah/Areas/Admin/Views/HotelRooms/Edit.cshtml
@@ -4,20 +4,17 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
-
-<h4>HotelRoom</h4>
+<div class="text-center  m-2 mt-5 p-5 h">
+    <h1>Edit Hotel Room</h1>
+</div>
 <hr />
+
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
+   <div class="col-md-8 m-auto">
+        <form asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            @*<div class="form-group">
-                <label asp-for="Type" class="control-label"></label>
-                <input asp-for="Type" class="form-control" />
-                <span asp-validation-for="Type" class="text-danger"></span>
-            </div>*@
+           
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
                 <input asp-for="Description" class="form-control" />
@@ -32,6 +29,10 @@
                 <label asp-for="CancelBeforeHours" class="control-label"></label>
                 <input asp-for="CancelBeforeHours" class="form-control" />
                 <span asp-validation-for="CancelBeforeHours" class="text-danger"></span>
+            </div>
+             <div class="form-group w-50">
+                <label asp-for="ImageUrl" class="control-label l"></label>
+                <input class="form-control" accept="image/*" type="file" name="image" id="upFile1" />
             </div>
             <div class="form-group">
                 <label asp-for="HotelId" class="control-label">Hotel Name</label>
@@ -72,18 +73,14 @@
                     </table>
                 </div>
             </div>
-
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+             <div class="form-group m-3 p-3">
+                <input type="submit" value="Save" class="btn btn-primary" /> ||  <a asp-action="Index" class="btn btn-outline-primary">Back to List</a>
             </div>
+            
         </form>
     </div>
 </div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
+ 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
