--- a/Suaah/Areas/Admin/Views/HotelRooms/Index.cshtml
+++ b/Suaah/Areas/Admin/Views/HotelRooms/Index.cshtml
@@ -1,31 +1,92 @@
 ﻿@model IEnumerable<Suaah.Models.HotelRoom>
+@using Suaah.Data
+@inject ApplicationDbContext _context
+@{
+    ViewData["Title"] = "Hotels";
+
+    var rooms = _context.HotelRooms.ToList();
+    var hotels = _context.Hotels.ToList();
+}
 
 @{
     ViewData["Title"] = "Index";
 }
+<div class="text-center  m-2 mt-5 p-5 h">
+    <h1>Rooms</h1>
+</div>
 
-<h1>Index</h1>
 @if (User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Manager))
 {
-    <p>
-        <a asp-action="Create">Create New</a>
-    </p>
+    <div class="m-2 mb-5">
+        <a asp-action="Create" class="w-100 d-block btn btn-danger p-2">Create New Room</a>
+    </div>
 }
 
-<table class="table">
+<form asp-action="Index" method="get">
+    <div class="form-actions no-color text-center p-3">
+
+        <input type="search" list="desc" name="rdesc" value="@ViewData["rdesc"]" placeholder="Room Description" class="p-2" />
+        <datalist id="desc">
+            @foreach (var item in rooms)
+            {
+                <option>@item.Description</option>
+            }
+        </datalist>
+
+        <input type="search" list="price" name="rprice" value="@ViewData["rprice"]" placeholder="Room Price" class="p-2" />
+        <datalist id="price">
+            @foreach (var item in rooms)
+            {
+                <option>@item.Price</option>
+            }
+        </datalist>
+
+        <input type="search" list="hotel" name="rhotel" value="@ViewData["rhotel"]" placeholder="Hotel" class="p-2" />
+        <datalist id="price">
+            @foreach (var item in hotels)
+            {
+                <option>@item.Name</option>
+            }
+        </datalist>
+
+        <input type="submit" value="-  Search  -" class="btn btn-outline-danger p-2" />
+        <br />
+
+    </div>
+</form>
+
+<div class="text-center">
+    <partial name="_Pagination" />
+    <a asp-action="Index" class="btn btn-outline-info my-4">Back to Full List</a>
+</div>
+
+<table class="table table-hover table-striped text-center p-3">
     <thead>
         <tr>
-            @*<th>
-                @Html.DisplayNameFor(model => model.Type)
-            </th>*@
             <th>
-                @Html.DisplayNameFor(model => model.Description)
+                <a asp-action="Index" 
+                   asp-route-rdesc="@ViewData["rdesc"]" asp-route-rprice="@ViewData["rprice"]"
+                   asp-route-rhotel="@ViewData["rhotel"]"
+                   asp-route-order="description" asp-route-ordersort="@ViewBag.ordersort">
+                    @Html.DisplayNameFor(model => model.Description)
+                </a>
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Price)
+                 <a asp-action="Index" 
+                   asp-route-rdesc="@ViewData["rdesc"]" asp-route-rprice="@ViewData["rprice"]"
+                   asp-route-rhotel="@ViewData["rhotel"]"
+                   asp-route-order="price" asp-route-ordersort="@ViewBag.ordersort">
+                    @Html.DisplayNameFor(model => model.Price)
+                </a>
+               
             </th>
             <th>
+                 <a asp-action="Index" 
+                   asp-route-rdesc="@ViewData["rdesc"]" asp-route-rprice="@ViewData["rprice"]"
+                   asp-route-rhotel="@ViewData["rhotel"]"
+                   asp-route-order="hotel" asp-route-ordersort="@ViewBag.ordersort">
                 @Html.DisplayNameFor(model => model.Hotel)
+                </a>
             </th>
             <th></th>
         </tr>
@@ -34,9 +95,6 @@
         @foreach (var item in Model)
         {
             <tr>
-               @* <td>
-                    @Html.DisplayFor(modelItem => item.Type)
-                </td>*@
                 <td>
                     @Html.DisplayFor(modelItem => item.Description)
                 </td>
