--- a/Suaah/Areas/Admin/Views/Hotels/Create.cshtml
+++ b/Suaah/Areas/Admin/Views/Hotels/Create.cshtml
@@ -3,58 +3,49 @@
 @{
     ViewData["Title"] = "Create";
 }
-
-<h1>Create</h1>
-
-<h4>Hotel</h4>
+<div class="text-center  m-2 mt-5 p-5 h">
+    <h1>Create Hotel</h1>
+</div>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-8 m-auto">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
+            <div class="form-group m-2">
+                <input asp-for="Name" class="form-control" placeholder="Name" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Address" class="control-label"></label>
-                <input asp-for="Address" class="form-control" />
+            <div class="form-group m-2">
+                <input asp-for="Address" class="form-control" placeholder="Address"/>
                 <span asp-validation-for="Address" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
+            <div class="form-group m-2">
+                <input asp-for="Email" class="form-control" placeholder="Email"/>
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="PhoneNumber" class="control-label"></label>
-                <input asp-for="PhoneNumber" class="form-control" />
+            <div class="form-group m-2">
+                <input asp-for="PhoneNumber" class="form-control" placeholder="Phone Number"/>
                 <span asp-validation-for="PhoneNumber" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <textarea asp-for="Description" rows="3" class="form-control"></textarea>
+            <div class="form-group m-2">
+                <textarea asp-for="Description" rows="3" class="form-control" placeholder="Description"></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
-            </div> 
-            <div class="form-group">
-                <label asp-for="Stars" class="control-label"></label>
-                <textarea asp-for="Stars" rows="3" class="form-control"></textarea>
+            </div>
+            <div class="form-group m-2">
+                <input asp-for="Stars" rows="3" class="form-control" placeholder="Stars" />
                 <span asp-validation-for="Stars" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="form-group m-3 p-3">
+                <input type="submit" value="Create" class="btn btn-primary" /> ||  <a asp-action="Index" class="btn btn-outline-primary">Back to List</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+ 
 
 @section Scripts {
     @{
-    await Html.RenderPartialAsync("_ValidationScriptsPartial");
-}
-}
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+    }
