--- a/Suaah/wwwroot/css/site.css
+++ b/Suaah/wwwroot/css/site.css
@@ -1,23 +1,36 @@
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
 }
 
-#myTable_filter
-{
-    margin-bottom:15px;
+#myTable_filter {
+    margin-bottom: 15px;
+}
+
+.h {
+    background-color: black;
+    color: aliceblue;
+}
+
+.hd {
+    background-color: red;
+    color: aliceblue;
+}
+
+.f {
+    font-size: 22px;
 }
