--- a/Suaah/Areas/Admin/Views/AllHotelBookingHeaders/Details.cshtml
+++ b/Suaah/Areas/Admin/Views/AllHotelBookingHeaders/Details.cshtml
@@ -14,8 +14,10 @@
     }
 }
 
-<h1>Hotel Booking Details for Booking No. {@Model.HotelBookingHeader.Id}</h1>
+<div class="text-center  m-2 mt-5 p-5 h">
+    <h1>Hotel Booking Details for Booking No. {@Model.HotelBookingHeader.Id}</h1>
 
+</div>
 <form method="post">
     <br />
     <div class="container">
